# jupyqt

./: CHANGELOG.md  README.md  duties.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: pytest.ini
docs/: design.md  plan.md
examples/: demo_app.py  demo_notebook.ipynb  matplotlib_app.py  matplotlib_notebook.ipynb  minimal_app.py  widgets_notebook.ipynb
src/jupyqt/: __init__.py  api.py
src/jupyqt/kernel/: __init__.py  comm.py  messages.py  protocol.py  shell.py  thread.py
src/jupyqt/matplotlib/: __init__.py  backend.py
src/jupyqt/qt/: __init__.py  proxy.py  widget.py
src/jupyqt/server/: __init__.py  launcher.py  plugin.py
tests/: conftest.py  test_comm.py  test_launcher.py  test_plugin.py  test_protocol.py
